--- a/Proyecto/DacodesJobs/templates/users/puesto_detalles.html
+++ b/Proyecto/DacodesJobs/templates/users/puesto_detalles.html
@@ -47,7 +47,7 @@
             <p class="mb-0">{{puesto.nombre}}</p>
             <p>&bull; {{empresa.direccion}}</p>
           <h4 class="font-italic mb-0">Empresa</h4>
-            <p><a href="#">{{empresa.nombre}}</a></p>
+            <p><a href="{% url 'base:Nosotros' %}">{{empresa.nombre}}</a></p>
           <h4 class="font-italic mb-0">Jornada</h4>
             <p class="">{{puesto.jornada}}</p>
           <h4 class="font-italic mb-0">Timpo de contrato</h4>
