--- a/Proyecto/DacodesJobs/templates/partials/nav.html
+++ b/Proyecto/DacodesJobs/templates/partials/nav.html
@@ -14,7 +14,7 @@
         <a class="nav-link" href="{% url 'base:Index' %}">Inicio <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'base:Puestos' %}">Puestos <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'Puestos:Puestos' %}">Puestos <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'base:Nosotros' %}">Nosotros <span class="sr-only">(current)</span></a>
