--- a/Proyecto/DacodesJobs/templates/users/nosotros.html
+++ b/Proyecto/DacodesJobs/templates/users/nosotros.html
@@ -5,9 +5,12 @@
 {% block cuerpo %}
 <div class="container mt-5">
   <div class="row">
-    <div class="col-md-7 mb-5">
+    <div class="col-md-6 mb-5">
       <div class="p-4 mb-3 bg-white">
-        <h1 class="font-italic">{{empresa.nombre}}</h1>
+        <div class="text-center mb-5">
+          <img src="{% static 'images/logo.png' %}" class="bg-dark rounded img-fluid" alt="">
+        </div>
+        <!-- <h1 class="font-italic">{{empresa.nombre}}</h1> -->
         <p class="mb-0 font-weight-bold">Dirección</p>
         <p class="mb-4">{{empresa.direccion}}</p>
         <p class="mb-0 font-weight-bold">Horario</p>
@@ -44,13 +47,13 @@
         </div>
       </div>
 
+
+    </div>
+    <div class="col-md-6">
       <div class="p-4 mb-3 bg-white">
         <h3 class="h5 text-black mb-3">Nosotros</h3>
         <p>{{empresa.nosotros|safe}}</p>
       </div>
-    </div>
-    <div class="col-md-5">
-      maps
     </div>
   </div>
 </div>
