--- a/Proyecto/DacodesJobs/templates/users/puesto_detalles.html
+++ b/Proyecto/DacodesJobs/templates/users/puesto_detalles.html
@@ -11,7 +11,7 @@
         <p class="lead my-3">{{puesto.salario}} &bull; {{puesto.fecha_modificacion }}</p>
       </div>
       <div class="col-md-3 row d-flex justify-content-center">
-        <button class="btn btn-block btn-danger" type="button" name="button">Postularte</button>
+        <img src="{{ puesto.imagen_referencial.url }}" class="img-fluid img-thumbnail rounded">
       </div>
     </div>
 
