--- a/Proyecto/DacodesJobs/templates/users/index.html
+++ b/Proyecto/DacodesJobs/templates/users/index.html
@@ -26,7 +26,7 @@
 
   <div class="site-wrap" style="background-color: #f0f0f0;">
     <header class="site-navbar" role="banner">
-      {% include 'partials/nav.html' %}
+      {% include 'partials/Nav.html' %}
     </header>
 
     {% block cuerpo %}
