--- a/Proyecto/DacodesJobs/templates/partials/sidebar.html
+++ b/Proyecto/DacodesJobs/templates/partials/sidebar.html
@@ -12,16 +12,16 @@
 
  <strong class="list-group-item bg-dark text-light text-uppercase">Configuraciones</strong>
 
-  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelAreasTrabajo' %}">
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelAreasListar' %}">
       <i class="fa fa-network-wired text-info"></i> Areas de Trabajo
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="">
       <i class="fa fa-building text-info"></i> Datos de la empresa
   </a>
-  <a class="list-group-item list-group-item-action bg-dark text-light" href="">
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelEmpleados' %}">
       <i class="fa fa-users text-info"></i> Empleados
   </a>
-  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelPuestosPublicados' %}">
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelPuestosListar' %}">
       <i class="fa fa-id-card text-info"></i> Puestos Vacantes
   </a>
 
