Mensajes de error en formularios y relaciones entre modelos

--- a/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/listado.html
@@ -31,7 +31,7 @@
           {% for area in areas %}
           <tr>
             <th>{{area.id}}</th>
-            <td><a href="">{{area.nombre}}</a></td>
+            <td><a href="{% url 'Panel:PanelAreasActualizar' area.id %}">{{area.nombre}}</a></td>
             <td>{{area.jefe}}</td>
           </tr>
           {% endfor %}
