--- a/Proyecto/DacodesJobs/templates/partials/sidebar.html
+++ b/Proyecto/DacodesJobs/templates/partials/sidebar.html
@@ -18,7 +18,7 @@
   <a class="list-group-item list-group-item-action bg-dark text-light" href="">
       <i class="fa fa-building text-info"></i> Datos de la empresa
   </a>
-  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelEmpleados' %}">
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelEmpleadosListar' %}">
       <i class="fa fa-users text-info"></i> Empleados
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelPuestosListar' %}">
