--- a/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/formulario.html
+++ b/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/formulario.html
@@ -3,7 +3,7 @@
 {% block titulo %} Areas de trabajo {% endblock titulo %}
 
 {% block breadcrumb %}
-  <li class="breadcrumb-item text-capitalize" aria-current="page">Puestos</li>
+  <li class="breadcrumb-item text-capitalize" aria-current="page"><a href="{% url 'Panel:PanelAreasListar' %}">Areas de Trabajo</a></li>
   {% if object %}
     <li class="breadcrumb-item text-capitalize" aria-current="page">Actualizar</li>
     <li class="breadcrumb-item text-capitalize" aria-current="page">{{object.nombre | truncatewords:"4"}}</li>
@@ -16,13 +16,32 @@
 {% block card-header %}
   <div class="container-fluid">
     <div class="row d-flex justify-content-between">
-      <span><i class="fa fa-bars"></i> Puestos Vacantes Publicados</span>
-      <a href="{% url 'Panel:PanelPuestosCrear' %}" class="btn btn-light" type="button" name="button"><i class="fa fa-plus-circle"></i> Nuevo</a>
+      <span><i class="fa fa-bars"></i> Formulario de Puestos Vacantes Publicados</span>
+      <a href="{% url 'Panel:PanelAreasCrear' %}" class="btn btn-light"><i class="fa fa-plus-circle"></i> Nuevo</a>
     </div>
   </div>
 {% endblock card-header %}
 
 {% block card-body %}
+
+  {% if form.errors %}
+     <div class="alert alert-light">
+       <h4 class="text-primary font-weight-bold"><i class="fa fa-exclamation-triangle text-warning"></i> Por favor corrige los siguientes errores</h4>
+       <ul>
+         {% for field in form %}
+           {% if field.errors %}
+             {% for error in field.errors %}
+               <li class="text-secondary font-weight-bold font-italic">{{ error|escape }}</li>
+             {% endfor %}
+           {% endif %}
+         {% endfor %}
+       </ul>
+       {% if form.non_field_errors %}
+         {{ form.non_field_errors }}
+       {% endif %}
+     </div>
+   {% endif %}
+
   <form method="post" enctype="multipart/form-data" >
     {% csrf_token %}
     <div class="form-group row">
@@ -45,7 +64,7 @@
     </div>
     <div class="form-group row">
       <div class="container d-flex justify-content-end">
-        <input type="submit" class="btn btn-primary btn-lg">
+        <input type="submit" class="btn btn-primary btn-lg rounded-pill">
       </div>
     </div>
   </form>
