--- a/Proyecto/DacodesJobs/templates/panel/Empleados/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/Empleados/listado.html
@@ -11,7 +11,7 @@
   <div class="container-fluid">
     <div class="row d-flex justify-content-between">
       <span><i class="fa fa-bars"></i> Empleados Activos</span>
-      <button class="btn btn-light" type="button" name="button"><i class="fa fa-plus-circle"></i> Nuevo</button>
+      <a href="{% url 'Panel:PanelEmpleadosCrear' %}" class="btn btn-light"><i class="fa fa-plus-circle"></i> Nuevo</a>
     </div>
   </div>
 {% endblock card-header %}
@@ -22,19 +22,21 @@
       <table class="table table-striped table-hover">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Salario</th>
-            <th scope="col">Jornada</th>
-            <th scope="col">Contrato</th>
+            <th>#</th>
+            <th>Nombre</th>
+            <th>Salario</th>
+            <th>Jornada</th>
+            <th>Contrato</th>
           </tr>
         </thead>
         <tbody>
           {% for empleado in empleados %}
           <tr>
-            <th scope="row">{{empleado.id}}</th>
-            <td><a href="">{{empleado.nombre}}</a></td>
-            <td>{{empleado.jefe}}</td>
+            <th>{{empleado.id}}</th>
+            <td><a href="{% url 'Panel:PanelEmpleadosActualizar' empleado.id %}">{{empleado.nombre}}</a></td>
+            <td>{{empleado.salario}}</td>
+            <td>{{empleado.jornada}}</td>
+            <td>{{empleado.contrato}}</td>
           </tr>
           {% endfor %}
         </tbody>
