--- a/Proyecto/DacodesJobs/templates/panel/Puestos/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/Puestos/listado.html
@@ -45,7 +45,7 @@
                 <span class="badge badge-pill badge-danger">Ocupado</span>
               {% endif %}
             </td>
-            <td><a href="#" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></a></td>
+            <td><a href="" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></a></td>
           </tr>
           {% endfor %}
         </tbody>
